--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 11 11:23:56 BDT 2023
-sdk.dir=C\:\\Users\\antor\\AppData\\Local\\Android\\Sdk
+#Tue Nov 14 14:25:37 BDT 2023
+sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
