--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor")
 
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.google.android.gms:play-services-ads:22.5.0'
 }
